# boincrs

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SUPPORT.md  release-plz.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/scripts/: check-changelog.sh
.github/workflows/: ci.yml  docs.yml  pr-title.yml  release-plz.yml  release.yml
docs/: .gitignore  README.md  compatibility-matrix.md  docusaurus.config.js  package-lock.json  package.json  release-checklist.md  sidebars.js
docs/architecture/: app-controller.md  beta-primegrid-asteroids.md  project-templates-and-profiles.md  smoke-checklist.md
docs/decisions/: 0001-error-handling.md
docs/guide/: accessibility.md  changelog.md  compatibility.md  configuration.md  contributing.md  getting-started.md  installation.md  intro.md  keyboard.md  release-checklist.md  roadmap.md  support.md  testing.md  usage.md  why-boincrs.md
docs/guide/architecture/: app-controller.md  beta-primegrid-asteroids.md  project-templates-and-profiles.md  smoke-checklist.md
src/: error.rs  lib.rs  main.rs
src/app/: actions.rs  controller.rs  mod.rs  reconnect.rs  state.rs
src/boinc/: bootstrap.rs  mod.rs  models.rs  profiles.rs  protocol.rs  rpc_client.rs  templates.rs  transport.rs
src/ui/: keymap.rs  layout.rs  mod.rs  theme.rs
tests/: action_flow_tests.rs  bootstrap_templates_tests.rs  compatibility_matrix_tests.rs  controller_flow_tests.rs  live_beta_projects.rs  live_local_boinc.rs  protocol_tests.rs  reconnect_tests.rs
(+23 files in other folders)
